@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-* Fixed: ViaFree changed their JSON....again....and broke the main listing (Fixes #1163)
+* Fixed: ViaFree changed their JSON...again...and again...and broke the main listing (Fixes #1163)
 
 [I]Previous changes[/I]
+* Fixed: ViaFree changed their JSON....again....and broke the main listing (Fixes #1163)
 * Fixed: ViaFree changed their JSON and broke the main listing (Fixes #1139)
 * Fixed: Some ViaFree streams did not play (Fixes #1107)
 * Fixed: some ViaFree videos that were just live did not play (Fixes #1050)
